--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,17 +15,15 @@ jobs:
       - uses: actions/checkout@v2
 
       # Step 2: create virtual env and install dependencies
-      - run:
-        name: install dependencies
-        command: |
+      - name: install dependencies
+        run: |
           python3 -m venv venv
           . venv/bin/activate
           pip install -r requirements.txt
 
       # Step 3: run linter and tests
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            flake8 --exclude=venv* --statistics
-            pytest -v --cov=calculator
+      - name: run tests
+        run: |
+          . venv/bin/activate
+          flake8 --exclude=venv* --statistics
+          pytest -v --cov=calculator
