--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,5 +25,5 @@ jobs:
       - name: run tests
         run: |
           . venv/bin/activate
-          flake8 --exclude=venv* --statistics
-          pytest -v --cov=calculator
+          flake8 --statistics
+          pytest -v --cov
