--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -21,7 +21,11 @@ jobs:
           . venv/bin/activate
           pip install -r requirements.txt
 
-      # Step 3: run linter and tests
+      # Step 3: Run program
+      - name: run calculator
+        run: python3 calc.py
+
+      # Step 4: run linter and tests
       - name: run tests
         run: |
           . venv/bin/activate
