--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,7 +22,11 @@ jobs:
           . venv/bin/activate
           pip install -r requirements.txt
 
-      # Step 3: run linter and tests
+      # Step 3: run program
+      - name: run program
+        run: python3 calc.py
+
+      # Step 4: run linter and tests
       - name: run tests
         run: |
           . venv/bin/activate
