--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,20 +15,6 @@ jobs:
       # Step 1: obtain repo from GitHub
       - uses: actions/checkout@v2
 
-      # Step 2: create virtual env and install dependencies
-      - name: install dependencies
-        run: |
-          python3 -m venv venv
-          . venv/bin/activate
-          pip install -r requirements.txt
-
-      # Step 3: run linter and tests
-      - name: run tests
-        run: |
-          . venv/bin/activate
-          flake8 --exclude=venv* --statistics
-          pytest -v --cov=calculator
-
-      # Step 4: run program
+      # Step 2: run program
       - name: run program
-        run: python3 calc.py
+        run: g++ main.cpp
