--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           . venv/bin/activate
           flake8 --exclude=venv* --statistics
-          pytest -v --cov=calculator
+          pytest -v --cov=venv
 
       # Step 4: run program
       - name: run program
