--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,6 +15,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16"
+          
+      - name: install-ng
+        run: npm install -g @angular/cli
       - name: deps
         run: npm i
 
